--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>springcloud-demo</artifactId>
+    <artifactId>spring-cloud-tx-lcn-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springcloud-demo</name>
+    <name>spring-cloud-tx-lcn-demo</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -24,6 +24,7 @@
         <module>config-server</module>
         <module>client-one</module>
         <module>client-two</module>
+        <module>zuul</module>
     </modules>
 
     <dependencies>
