feign hystrix timeout

--- a/client-one/src/main/resources/bootstrap.yml
+++ b/client-one/src/main/resources/bootstrap.yml
@@ -21,6 +21,21 @@ eureka:
     lease-renewal-interval-in-seconds: 10
     lease-expiration-duration-in-seconds: 30
 
+feign:
+  hystrix:
+    enabled: true
+hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          #如果enabled设置为false，则请求超时交给ribbon控制
+          enabled: true
+        isolation:
+          thread:
+            timeoutInMilliseconds: 5000
+
 tx-lcn:
   client:
     manager-address: 127.0.01:8070
+
